added docker files

--- a/src/Robotics/AGV/Cargo.toml
+++ b/src/Robotics/AGV/Cargo.toml
@@ -1,6 +1,11 @@
 [package]
-name = "AGV"
+name = "agv"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+
+
+[[bin]]
+name = "agv"
+path = "src/main.rs"
