--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -7,8 +7,8 @@ services:
       - 5672:5672
       - 15672:15672
     volumes:
-      - ~/.docker-conf/rabbitmq/data/:/var/lib/rabbitmq/
-      - ~/.docker-conf/rabbitmq/log/:/var/log/rabbitmq
+      - ~/.docker-conf/rabbitmq/data/:/var/lib/rabbitmq2/
+      - ~/.docker-conf/rabbitmq/log/:/var/log/rabbitmq2
     networks:
       - rabbitmq
     restart: unless-stopped
