--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -10,9 +10,29 @@ services:
       - ~/.docker-conf/rabbitmq/data/:/var/lib/rabbitmq/
       - ~/.docker-conf/rabbitmq/log/:/var/log/rabbitmq
     networks:
+      - app-network
+    restart: unless-stopped
+
+  redis:
+    image: redis:alpine
+    container_name: "redis"
+    ports:
+      - 6379:6379
+    networks:
+      - app-network
+
+  go_app:
+    build:
+      context: ./fault_detection
+      dockerfile: Dockerfile
+    container_name: "go_app"
+    depends_on:
       - rabbitmq
+      - redis
+    networks:
+      - app-network
     restart: unless-stopped
 
 networks:
-  rabbitmq:
+  app-network:
     driver: bridge
