--- a/src/App/Orchestrator.csproj
+++ b/src/App/Orchestrator.csproj
@@ -16,6 +16,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="log4net" Version="3.0.3" />
     <PackageReference Include="Npgsql" Version="8.0.5" />
     <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
 
