--- a/src/App/Orchestrator.csproj
+++ b/src/App/Orchestrator.csproj
@@ -1,7 +1,7 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
+    <OutputType>EXE</OutputType>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Google.Protobuf" Version="3.28.3" />
     <PackageReference Include="Grpc" Version="2.46.6" />
+    <PackageReference Include="Grpc.AspNetCore" Version="2.66.0" />
     <PackageReference Include="Grpc.Core" Version="2.46.6" />
     <PackageReference Include="Grpc.Net.Client" Version="2.66.0" />
     <PackageReference Include="Grpc.Tools" Version="2.67.0">
@@ -19,9 +20,8 @@
     <PackageReference Include="log4net" Version="3.0.3" />
     <PackageReference Include="Npgsql" Version="8.0.5" />
     <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
-
   </ItemGroup>
-<ItemGroup>
-  <Protobuf Include="Protos\fault_service.proto" />
-</ItemGroup>
+  <ItemGroup>
+    <Protobuf Include="Protos\fault_service.proto" GrpcServices="Server" />
+  </ItemGroup>
 </Project>
