--- a/src/App/log4net.config
+++ b/src/App/log4net.config
@@ -5,7 +5,7 @@
     <appender-ref ref="ConsoleAppender" />
   </root>
   <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
-    <file value="logss/Orchestrator.log" />
+    <file value="logged/Orchestrator.log" />
     <appendToFile value="true" />
     <rollingStyle value="Size" />
     <maxSizeRollBackups value="5" />
