--- a/src/fault_detection/Dockerfile
+++ b/src/fault_detection/Dockerfile
@@ -20,7 +20,9 @@ COPY wait-for-it.sh /app/wait-for-it.sh
 RUN chmod +x /app/wait-for-it.sh
 
 RUN mkdir -p /app/logs
+RUN mkdir /app/Protos
 
+COPY Protos/ /app/Protos
 # Build the Go app
 RUN go build -o fault_detection
 
