--- a/src/Robotics/AGV/Cargo.toml
+++ b/src/Robotics/AGV/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2021"
 amqprs = "2.1.0"
 log = "0.4.22"
 log4rs = "1.3.0"
-tokio = "1.41.0"
+tokio = { version = "1.41.0", features = ["signal"] }
+tokio-signal = "0.2.9"
 [[bin]]
 name = "agv"
 path = "src/main.rs"
